Fix SonarQube issues in media-service: constructor injection, specific exceptions, Java 16+ streams